--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -116,7 +116,7 @@
 </div>
 
 <script>
-    const ADMIN_PASSWORD = 'WITCH_ADMIN_2025'; // ПОМЕНЯЙ ПАРОЛЬ!
+    const ADMIN_PASSWORD = 'witch2026'; // ПОМЕНЯЙ ПАРОЛЬ!
 
     document.getElementById('loginForm').addEventListener('submit', function(e) {
         e.preventDefault();
